--- a/MvvmExampleAndroid/Resources/layout/activity_detail.xml
+++ b/MvvmExampleAndroid/Resources/layout/activity_detail.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:local="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_margin="5dp"
+    android:padding="10dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -20,7 +20,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="City Name:"
+            android:text="@string/city_name"
             android:layout_marginEnd="5dp"
             android:textStyle="bold"/>
 
@@ -38,7 +38,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Country:"
+            android:text="@string/country"
             android:layout_marginEnd="5dp"
             android:textStyle="bold"/>
 
@@ -56,7 +56,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Weather:"
+            android:text="@string/weather"
             android:layout_marginEnd="5dp"
             android:textStyle="bold"/>
 
@@ -74,7 +74,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Current Temp:"
+            android:text="@string/current_temp"
             android:layout_marginEnd="5dp"
             android:textStyle="bold"/>
 
@@ -92,7 +92,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Min Temp:"
+            android:text="@string/min_temp"
             android:layout_marginEnd="5dp"
             android:textStyle="bold"/>
 
@@ -105,7 +105,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Max Temp:"
+            android:text="@string/max_temp"
             android:layout_marginEnd="5dp"
             android:textStyle="bold"/>
 
@@ -114,7 +114,13 @@
             android:layout_height="wrap_content"
             local:MvxBind="Text SelectedWeatherResult.Main.TempMax"/>
     </LinearLayout>
-   
+
+    <ProgressBar
+        android:id="@+id/determinateBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        local:MvxBind="Visibility Visibility(IsLoading)"/>
+
 </LinearLayout>
 
 
