--- a/MvvmExampleAndroid/Resources/layout/weather_item.xml
+++ b/MvvmExampleAndroid/Resources/layout/weather_item.xml
@@ -15,7 +15,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="City Name:"
+            android:text="@string/city_name"
             android:layout_marginEnd="5dp"
             android:textStyle="bold"/>
 
@@ -32,7 +32,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Country:"
+            android:text="@string/country"
             android:layout_marginEnd="5dp"
             android:textStyle="bold"/>
 
@@ -49,7 +49,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Weather:"
+            android:text="@string/weather"
             android:layout_marginEnd="5dp"
             android:textStyle="bold"/>
 
@@ -66,7 +66,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Current Temp:"
+            android:text="@string/current_temp"
             android:layout_marginEnd="5dp"
             android:textStyle="bold"/>
 
@@ -83,7 +83,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Min Temp:"
+            android:text="@string/min_temp"
             android:layout_marginEnd="5dp"
             android:textStyle="bold"/>
 
@@ -96,7 +96,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Max Temp:"
+            android:text="@string/max_temp"
             android:layout_marginEnd="5dp"
             android:textStyle="bold"/>
 
